# utilitatsfirma-api-interna/src/main/java/es/caib/utilitatsfirma/api/interna/secure/validatesignature/v1/SignatureRequestedInformation.java
@@ -1,5 +1,7 @@
 package es.caib.utilitatsfirma.api.interna.secure.validatesignature.v1;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 /**
  * 
  * @author anadal
@@ -7,64 +9,75 @@ package es.caib.utilitatsfirma.api.interna.secure.validatesignature.v1;
  */
 public class SignatureRequestedInformation {
 
-  protected Boolean returnSignatureTypeFormatProfile = null;
-  
-  protected Boolean validateCertificateRevocation = null;
+    protected Boolean returnSignatureTypeFormatProfile = null;
 
-  protected Boolean returnCertificateInfo = null;
+    protected Boolean validateCertificateRevocation = null;
 
-  protected Boolean returnValidationChecks = null;
-  
-  protected Boolean returnCertificates = null;
-  
-  protected Boolean returnTimeStampInfo = null;
+    protected Boolean returnCertificateInfo = null;
 
-  public Boolean getReturnSignatureTypeFormatProfile() {
-    return returnSignatureTypeFormatProfile;
-  }
+    protected Boolean returnValidationChecks = null;
 
-  public void setReturnSignatureTypeFormatProfile(Boolean returnSignatureTypeFormatProfile) {
-    this.returnSignatureTypeFormatProfile = returnSignatureTypeFormatProfile;
-  }
+    protected Boolean returnCertificates = null;
 
-  public Boolean getValidateCertificateRevocation() {
-    return validateCertificateRevocation;
-  }
+    protected Boolean returnTimeStampInfo = null;
 
-  public void setValidateCertificateRevocation(Boolean validateCertificateRevocation) {
-    this.validateCertificateRevocation = validateCertificateRevocation;
-  }
+    // Default constructor
+    public SignatureRequestedInformation() {
+        super();
+    }
 
-  public Boolean getReturnCertificateInfo() {
-    return returnCertificateInfo;
-  }
+    public Boolean getReturnSignatureTypeFormatProfile() {
+        return returnSignatureTypeFormatProfile;
+    }
 
-  public void setReturnCertificateInfo(Boolean returnCertificateInfo) {
-    this.returnCertificateInfo = returnCertificateInfo;
-  }
+    public void setReturnSignatureTypeFormatProfile(Boolean returnSignatureTypeFormatProfile) {
+        this.returnSignatureTypeFormatProfile = returnSignatureTypeFormatProfile;
+    }
 
-  public Boolean getReturnValidationChecks() {
-    return returnValidationChecks;
-  }
+    public Boolean getValidateCertificateRevocation() {
+        return validateCertificateRevocation;
+    }
 
-  public void setReturnValidationChecks(Boolean returnValidationChecks) {
-    this.returnValidationChecks = returnValidationChecks;
-  }
+    public void setValidateCertificateRevocation(Boolean validateCertificateRevocation) {
+        this.validateCertificateRevocation = validateCertificateRevocation;
+    }
 
-  public Boolean getReturnCertificates() {
-    return returnCertificates;
-  }
+    public Boolean getReturnCertificateInfo() {
+        return returnCertificateInfo;
+    }
 
-  public void setReturnCertificates(Boolean returnCertificates) {
-    this.returnCertificates = returnCertificates;
-  }
+    public void setReturnCertificateInfo(Boolean returnCertificateInfo) {
+        this.returnCertificateInfo = returnCertificateInfo;
+    }
 
-  public Boolean getReturnTimeStampInfo() {
-    return returnTimeStampInfo;
-  }
+    public Boolean getReturnValidationChecks() {
+        return returnValidationChecks;
+    }
 
-  public void setReturnTimeStampInfo(Boolean returnTimeStampInfo) {
-    this.returnTimeStampInfo = returnTimeStampInfo;
-  }
+    public void setReturnValidationChecks(Boolean returnValidationChecks) {
+        this.returnValidationChecks = returnValidationChecks;
+    }
+
+    public Boolean getReturnCertificates() {
+        return returnCertificates;
+    }
+
+    public void setReturnCertificates(Boolean returnCertificates) {
+        this.returnCertificates = returnCertificates;
+    }
+
+    public Boolean getReturnTimeStampInfo() {
+        return returnTimeStampInfo;
+    }
+
+    public void setReturnTimeStampInfo(Boolean returnTimeStampInfo) {
+        this.returnTimeStampInfo = returnTimeStampInfo;
+    }
+
+    public static SignatureRequestedInformation valueOf(String json) throws Exception {
+
+        ObjectMapper mapper = new ObjectMapper();
+        return mapper.readValue(json, SignatureRequestedInformation.class);
+    }
 
 }
